new change made

--- a/web page.html
+++ b/web page.html
@@ -4,8 +4,9 @@
     
     </head>
     <body>
-        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto laborum, 
+        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.
             dicta error ratione et fugit ipsum quia ex, expedita, 
             quam quis blanditiis magni! Accusamus eligendi atque voluptatum dicta, vitae adipisci.</h1>
+        <h2> i can also add new features which are nice to be incorporated into visual studio</h2>
     </body>
 </html>
