--- a/login page.html
+++ b/login page.html
@@ -5,10 +5,12 @@
     <head>
         <!--new login page file-->
         <title>My resume</title>
+        <link rel="icon" type="image/png" href="C:\Users\divyamar\Desktop\web developer\web-developer\favicon.png">
     </head>
     <body>
         <input type="text" placeholder="Enter your username">
         <input type="password" placeholder="Enter your password here">
         <button>Login</button>
+
     </body>
 </html>
